Javadoc fixes, code cleanup, and project docs
- Fix and fill in missing/incorrect javadocs across all public APIs
- Remove @author tags from all source files
- Use StandardCharsets.UTF_8 in URLEncoder to drop dead try/catch
- Remove redundant Error catch in BatchQueueImpl.logQueuedData
- Swap queue list reference instead of copying on drain (O(1), shorter lock)
- Simplify Slf4JLoggerImpl.logDataToString with stream/joining
- Remove null pre-initializations of locals in LoggingFilter.doFilter
- Remove redundant throws IllegalArgumentException from PluginFactory
- Fix StringBuilder concatenation in JdbcLoggerImpl SQL builders
- Add CLAUDE.md and README.md

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>